fix'd styling alignment for all page titles, finished styling addCount Form'

--- a/src/components/EditProductForm/EditProductForm.css
+++ b/src/components/EditProductForm/EditProductForm.css
@@ -1,6 +1,8 @@
-.countPageTitle {
+.pageTitle {
     display: flex;
     margin-bottom: 5px;
+    align-content: stretch;
+    flex-wrap: wrap;
     justify-content: center;
     
 }
