--- a/src/components/ProductListPage/ProductListPage.css
+++ b/src/components/ProductListPage/ProductListPage.css
@@ -5,7 +5,7 @@
 
 .pageTitle {
     display: flex;
-    margin-left: 25px;
+    margin-left: 1px;
     margin-bottom: 15px;
 }
 
